header z-index fixed

--- a/client/src/header/Header.css
+++ b/client/src/header/Header.css
@@ -12,6 +12,7 @@
   font-family      : Source Sans Pro;
   flex-direction   : row;
   justify-content  : space-between;
+  z-index          : 1;
 }
 
 /* HAMBURGER MENU */
